# toygine2

./: .clang-format  .clang-tidy  .codacy.yaml  .coderabbit.yaml  .deepsource.toml  .gitignore  .instructions.md  .pr_agent.toml  AGENTS.md  CMakeLists.txt  CMakePresets.json  CODE_OF_CONDUCT.md  Dockerfile.gba  Doxyfile  LICENSE  README.md  README.ru.md  SECURITY.md  _formulas.tex  annotated.html  annotated_dup.js  bencher.yaml  classes.html  codecov.yml  concepts.html  concepts.js  dir_000000_000002.html  dir_000000_000006.html  dir_000000_000007.html  dir_000000_000008.html  dir_000000_000015.html  dir_000000_000020.html  dir_000001_000003.html  dir_000001_000005.html  dir_000002_000003.html  dir_000002_000004.html  dir_000002_000005.html  dir_000002_000013.html  dir_000002_000015.html  dir_000002_000020.html  (+560 more)
.github/: dependabot.yml
awesome/: annotated.html  classes.html  dir_000001_000003.html  dir_000001_000005.html  dir_000002_000003.html  dir_000002_000005.html  dir_000003_000000.html  dir_000003_000007.html  dir_000005_000000.html  dir_000005_000009.html  dir_000006_000003.html  dir_000008_000003.html  dir_000008_000005.html  dir_000010_000005.html  dir_09678985b484b4db3dfe2991103a0695.html  dir_0a18029368813177489ba7a997da11e8.html  dir_0a18029368813177489ba7a997da11e8_dep.md5  dir_169513a5e8dfd029eb46d45e91eaaf0b.html  dir_169513a5e8dfd029eb46d45e91eaaf0b_dep.map  dir_3d69f64eaf81436fe2b22361382717e5.html  dir_511bc5408ecfc55ec4ad096fbb1fc76f.html  dir_511bc5408ecfc55ec4ad096fbb1fc76f_dep.map  dir_511bc5408ecfc55ec4ad096fbb1fc76f_dep.md5  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_68267d1309a1af8e8297ef4c3efbcdba.js  dir_68267d1309a1af8e8297ef4c3efbcdba_dep.map  dir_68267d1309a1af8e8297ef4c3efbcdba_dep.md5  dir_85f2f5b017d0e280691879598107c592.html  dir_85f2f5b017d0e280691879598107c592.js  (+66 more)
benchmarks/: CMakeLists.txt  benchmark_factory.hpp  core_benchmark.cpp  geometry_benchmark.cpp  main.cpp  math_benchark.cpp  math_benchmark.cpp  utils.hpp
benchmarks/core/: chrono_countdown_timer.benchmark.cpp  format.benchmark.cpp  hashes.benchmark.cpp  itoa.benchmark.cpp  o_string_stream.benchmark.cpp  o_string_stream_benchmark.cpp  string_fixed_storage.benchmark.cpp  utils.benchmark.cpp
benchmarks/geometry/: circle.benchmark.cpp  ellipse.benchmark.cpp  section.benchmark.cpp
benchmarks/math/: fixed.benchmark.cpp  fixed_benchmark.cpp  point.benchmark.cpp  utils.benchmark.cpp  vector2.benchmark.cpp
cmake/: CodeCoverage.cmake  (+6 more)
docs/: CMakeLists.txt  Doxyfile  Doxyfile.en  Doxyfile.in  Doxyfile.ru  Doxyfile_awesome_css.in  Doxyfile_m_css  Doxyfile_sphinx  code_style.md  code_style_ru.md  header_awesome.html
docs/codestyle/: DOXYGEN_CLASS_TEMPLATE.md  DOXYGEN_CLASS_TEMPLATE_RU.md  DOXYGEN_STYLE_GUIDE.md  DOXYGEN_STYLE_GUIDE_RU.md  code_style.md
docs/docs/html/m_css/: annotated.html  files.html  index.html  modules.html  namespaces.html  pages.html
docs/docs/xml/: Doxyfile.xml  index.xml
docs/source/: api.rst  conf.py  index.rst
docs/sphinx/source/: conf.py  index.rst
editor/: AGENTS.md  CMakeLists.txt
editor/src/: main.cpp  main_menu.hpp  main_menu.mm  vulkan_context.cpp  vulkan_context.hpp  window.hpp  window.mm
editor/src/main_window/: main_window.cpp  main_window.hpp
examples/console_app/: CMakeLists.txt  console_app.cpp
test/: CMakeLists.txt  gba_filtering_stream_buf.cpp  gba_filtering_stream_buf.hpp  gba_reporter.hpp  test.cpp  tests.cpp
test/app/: version.cpp  version.test.cpp
test/application/: version.test.cpp
test/catch/: tests.cpp
test/catch/app/: version.test.cpp
test/catch/core/: c_string_view.test.cpp  callbacks_pool.test.cpp  constexpr_utils.test.cpp  fixed_string.test.cpp  fixed_vector.test.cpp  format.test.cpp  hashes.test.cpp  o_string_stream.test.cpp  utils.test.cpp
test/catch/math/: point.test.cpp  vector2d.test.cpp
test/core/: array_size_test.cpp  bitwise_enum.test.cpp  c_string_test.cpp  c_string_view.test.cpp  c_string_view_test.cpp  callbacks_pool.test.cpp  callbacks_pool_test.cpp  constexpr_utils.test.cpp  constexpr_utils_test.cpp  core_utils_test.cpp  fix_string_test.cpp  fixed_string.test.cpp  fixed_string_test.cpp  fixed_vector.test.cpp  fixed_vector_test.cpp  format.test.cpp  hashes.test.cpp  hashes_test.cpp  o_string_stream.test.cpp  utils.test.cpp  utils_test.cpp
test/cpputest/: hello.test.cpp  tests.cpp
test/doctest/: main.cpp  tests.cpp
test/doctest/app/: version.test.cpp
test/doctest/core/: c_string_view.test.cpp  callbacks_pool.test.cpp  constexpr_utils.test.cpp  fixed_string.test.cpp  fixed_vector.test.cpp  format.test.cpp  hashes.test.cpp  o_string_stream.test.cpp  utils.test.cpp
test/doctest/math/: point.test.cpp  vector2d.test.cpp
test/geometry/: section.test.cpp
test/math/: fixed.test.cpp  fixed_std_extension.test.cpp  point.cpp  point.test.cpp  utils.test.cpp  vector2d.cpp  vector2d.test.cpp
test/mathematics/: point.cpp
test/network/: endpoint.test.cpp  socket_flags.test.cpp
test/platform/ui/: orientation.test.cpp  window_style.test.cpp
test/render/: clear_flags.test.cpp  pixel_format.test.cpp
tests/: CMakeLists.txt  gba_filtering_stream_buf.cpp  gba_filtering_stream_buf.hpp  tests.cpp
tests/application/: console_application.test.cpp  core_application.test.cpp  version.test.cpp
tests/core/: bitwise_enum.test.cpp  c_string_view.test.cpp  callbacks_pool.test.cpp  chrono_countdown_timer.test.cpp  chrono_stopwatch.test.cpp  constexpr_utils.test.cpp  core_utils_test.cpp  fixed_string.test.cpp  fixed_vector.test.cpp  format.test.cpp  format_context.test.cpp  format_pattern.test.cpp  format_string.test.cpp  hashes.test.cpp  log_backend.test.cpp  log_macros.test.cpp  log_macros_filter.test.cpp  log_metadata.test.cpp  log_record.test.cpp  o_string_stream.test.cpp  string_fixed_storage.test.cpp  utils.test.cpp
tests/geometry/: circle.test.cpp  ellipse.test.cpp  section.test.cpp
tests/math/: fixed.test.cpp  fixed_std_extension.test.cpp  point.test.cpp  utils.test.cpp  vector2.test.cpp  vector2d.test.cpp
tests/network/: endpoint.test.cpp
tests/render/: pixel_format.test.cpp
(+2983 files in other folders)
